Changed params to hopefully make model work better.

--- a/egs/elpis/asr1/conf/train_mtlalpha0.5.yaml
+++ b/egs/elpis/asr1/conf/train_mtlalpha0.5.yaml
@@ -13,10 +13,10 @@ sampling-probability: 0.0
 
 # encoder related
 etype: blstmp     # encoder architecture type
-elayers: 4
+elayers: 3
 eunits: 320
 eprojs: 320
-subsample: "1_2_2_1_1" # skip every n frame from input to nth layers
+#subsample: "1_2_2_1_1" # skip every n frame from input to nth layers
 # decoder related
 dlayers: 1
 dunits: 300
